<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="app_name">Ezzence</string>
    <string name="Usages_button_text">Gas/Water/Electricity</string>
    <string name="Temperature_button_text">Temperature</string>
    <string name="Settings_button_text">Settings</string>
    <string name="error_something_wrong">Something went wrong</string>
    <string name="title_activity_main">Main Menu</string>

    <!-- Base Activity -->
    <string name="header_button_home">Home</string>
    <string name="footer_button_back">Back</string>
    <string name="footer_button_menu_open">Open Menu</string>
    <string name="footer_button_menu_close">Close Menu</string>
    <string name="footer_button_ok">OK</string>

    <color name="blue">#25383C</color>
    <color name="red">#ff0000</color>
    <color name="green">#90f030</color>
    <color name="black">#000000</color>

    <!-- Usages -->
    <string name="title_activity_usages">Usages</string>
    <string name="usage_type">Usage type</string>
    <string name="tableDate">Date</string>
    <string name="tableValue">Value</string>
    <string name="week_avg">Week Average</string>
    <string name="month_avg">Month Average</string>
    <string name="empty"></string>
    <string name="Gass">Gas</string>
    <string name="Electricity">Electricity</string>
    <string name="Water">Water</string>

    <!-- Temperatures -->
    <string name="title_activity_temperatures">Temperatures</string>
    <string name="current_temp">\? *C</string>
    <string name="Change_temp">Change current temperature</string>
    <string name="temp_hint">New temperature</string>

    <!-- Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="change_language">Change language</string>
    <string name="font_scaling">Choose font scaling</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="big">Big</string>
    <string name="language_picker">Choose language</string>
    <string name="set_pin">new pin (5 digits)</string>
    <string name="confirm_pin">confirm new pin</string>
    <string name="pin_incorrect_size">Pin should be 5 digits long</string>
    <string name="pin_not_equal">Pincodes were not the same</string>
	<string name="temperature_perms">Only superusers can change temperatures</string>

    <!-- Login Activity -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="username_description">Your username</string>
    <string name="password_description">Your password</string>
    <string name="pin_description">Use pin</string>
    <string name="login_header">Login</string>
    <string name="use_pin">Your pin</string>

</resources>