<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context=".TransportActivity" >

    <include
        android:id="@+id/include1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/header" />

	<TextView
        android:id="@+id/temp_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/include1"
        android:text="@string/current_temp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:text="@string/Change_temp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temp_indicator"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="82dp"
        android:ems="10"
        android:hint="@string/temp_hint"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>
	<include
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		layout="@layout/footer" />

</RelativeLayout>